# ntt-rs-old

./: .gitignore  Cargo.toml  README.md  config.example.toml
migrations/: 20221215164444_Initial.sql  20221216193633_ChangeStartTimeToTimestampTZ.sql  20221217174943_AddNameAndDescriptionToEntries.sql  20221217175942_RestructureTimeTableEntry.sql  20221217184814_AddOneTimeEntryData.sql  20221217185058_AddEntryDataReferences.sql  20221217193547_FixBrainFart.sql
ntt-backend/: Cargo.toml  package-lock.json
ntt-backend/src/: config.rs  errors.rs  main.rs
ntt-backend/src/auth/: middleware.rs  mod.rs  session.rs  web.rs
ntt-backend/src/endpoints/: auth.rs
ntt-backend/src/io/: enhanced_model.rs  mod.rs
ntt-core/: Cargo.toml
ntt-core/src/: errors.rs  lib.rs  weekday.rs
ntt-core/src/io/: db_model.rs  mod.rs
ntt-core/src/io/auth/: auth.rs
ntt-core/src/io/db/: model.rs
ntt-frontend/: .env  package-lock.json  package.json  vite.config.ts
ntt-frontend/src/: App.vue  main.ts
ntt-frontend/src/components/: NavBar.vue  TimeTable.vue
ntt-frontend/src/router/: index.ts
ntt-frontend/src/styles/: app.scss
ntt-frontend/src/types/: TimeTables.ts  backend.ts  frontend.ts  types.ts  user.ts
ntt-frontend/src/views/: Schedules.vue
