[package]
name = "ntt-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# NTT Core
ntt-core = { path = "../ntt-core" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
# HTTP Server I/O
actix-web = "4.2.1"
actix-service = "2.0"
futures = "0.3"
once_cell = { version = "1.16.0" }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "json", "offline"] }
rand = "0.8.5"
serde_qs ="0.10.1"
# Configuration file
toml = "0.5.9"
serde = { version = "1.0.148", features = ["derive"], default-features = false }

typeshare = "1.0.0"

utoipa = { version = "2.4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.1", features=["actix-web"] }
thiserror = "1.0.37"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"