[package]
name = "ntt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Easier error handling
thiserror = { version = "1.0.37" }

# Database I/O
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = "0.4.23"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "json", "offline"] }
serde = { version = "1.0.148", features = ["derive"], default-features = false }
serde_json = "1.0.89"

# OAuth2 for interacting with GitHub
reqwest = { version = "0.11.13" }
oauth2 = { version = "4.3.0" }
